home screen content alignment redesign

--- a/styles/index.css
+++ b/styles/index.css
@@ -64,6 +64,7 @@ body {
     body .center-content .center-detail {
       margin: 100px auto 20px; }
       body .center-content .center-detail h2 {
+        width: 84%;
         text-align: left;
         font-family: inter, sans-serif;
         font-size: 50px;
@@ -71,6 +72,7 @@ body {
         color: white;
         padding: 20px 0px; }
       body .center-content .center-detail p {
+        width: 60%;
         font-family: manrope, sans-serif;
         font-weight: 400;
         font-size: 19px;
@@ -285,19 +287,16 @@ body {
   body .center-content .center-detail {
     margin: 100px auto 20px; }
     body .center-content .center-detail h2 {
-      margin-left: 20px;
       font-size: 25px;
       padding: 10px 0px; }
     body .center-content .center-detail p {
-      margin-left: 20px;
       font-size: 14px;
       margin-bottom: 0px;
       width: 80%;
       height: 170px; }
     body .center-content .center-detail a {
       font-size: 14px;
-      padding: 8px 15px;
-      margin-left: 20px; } }
+      padding: 8px 15px; } }
 
 @media (max-width: 375px) {
   body .video-wrapper .my-video {
