--- a/styles/index.scss
+++ b/styles/index.scss
@@ -100,6 +100,7 @@ body{
             margin:100px auto 20px;
 
             h2{
+                width: 84%;
                 text-align: left;
                 font-family: $fontInter;
                 font-size: 50px;
@@ -108,6 +109,7 @@ body{
                 padding: 20px 0px;
             }
             p{
+                width: 60%;
                 font-family: $fontManrope;
                 font-weight: 400;
                 font-size: 19px;
@@ -482,12 +484,10 @@ body{
             .center-detail{
                 margin:100px auto 20px;
                 h2{
-                    margin-left: 20px;
                     font-size: 25px;
                     padding: 10px 0px;
                 }
                 p{
-                    margin-left: 20px;
                     font-size: 14px;
                     margin-bottom: 0px;
                     width: 80%;
@@ -496,7 +496,6 @@ body{
                 a{
                     font-size: 14px;
                     padding: 8px 15px;
-                    margin-left: 20px;
                 }
             }
         } 
