background image changing in detail page

--- a/styles/detail.scss
+++ b/styles/detail.scss
@@ -5,6 +5,9 @@ $fontOpenSans : open-sans, sans-serif;
 
 body{
 
+    .holder{
+        background-image: url('../img/image (1).png');
+    }
     .content{
         position: static;
     }
