--- a/styles/index.css
+++ b/styles/index.css
@@ -15,6 +15,7 @@ body {
       bottom: 0;
       width: 100%;
       height: 100%;
+      vertical-align: bottom;
       object-fit: cover;
       position: relative; }
   body .content {
@@ -28,7 +29,7 @@ body {
       align-items: center;
       width: 100%; }
       body .content .top-nav .left {
-        padding: 30px; }
+        padding: 20px; }
         body .content .top-nav .left img {
           width: 78px; }
         body .content .top-nav .left .org-name {
@@ -38,7 +39,7 @@ body {
         font-size: 20px;
         list-style-type: none;
         margin: 0%;
-        padding-right: 10px; }
+        padding: 0%; }
         body .content .top-nav .right li {
           display: inline;
           margin: 0%;
@@ -166,6 +167,18 @@ body {
   body .page-item:hover {
     background-color: none !important; }
 
+@media (max-width: 1439px) {
+  body .content .top-nav .left .org-name {
+    display: none; } }
+
+@media (max-width: 1200px) {
+  body footer .foot-wrapper .bottom-sec .footer-links {
+    justify-content: center; }
+    body footer .foot-wrapper .bottom-sec .footer-links li {
+      display: block;
+      padding: 10px 8px;
+      text-align: center; } }
+
 @media (max-width: 1025px) {
   body .video-wrapper .my-video {
     height: 700px; }
@@ -186,14 +199,7 @@ body {
         margin-bottom: 35px; }
       body .center-content .center-detail a {
         font-size: 18px;
-        padding: 13px 33px; }
-  body .footer .foot-wrapper {
-    width: 100%; }
-    body .footer .foot-wrapper .foot-details {
-      width: 40%;
-      padding-left: 20px; }
-    body .footer .foot-wrapper .footer-links {
-      width: 60%; } }
+        padding: 13px 33px; } }
 
 @media (max-width: 912px) {
   body .video-wrapper .my-video {
@@ -243,20 +249,14 @@ body {
   body .center-content .center-detail {
     margin: 220px auto 20px; }
     body .center-content .center-detail p {
-      height: 150px; }
+      height: 150px; } }
+
+@media (max-width: 765px) {
   body .footer .foot-wrapper .foot-details {
-    width: 50%;
-    margin-left: 30px; }
+    width: 100%;
+    margin-left: 0%; }
   body .footer .foot-wrapper .footer-links {
-    width: 45%;
-    justify-content: center; }
-    body .footer .foot-wrapper .footer-links .foot-menu {
-      list-style-type: none;
-      padding: 0%; }
-      body .footer .foot-wrapper .footer-links .foot-menu li {
-        display: block;
-        padding: 10px 8px;
-        text-align: center; } }
+    width: 100%; } }
 
 @media (max-width: 610px) {
   body .center-content .center-detail h2 {
@@ -268,12 +268,7 @@ body {
     height: 170px; }
   body .center-content .center-detail a {
     padding: 15px 25px;
-    font-size: 15px; }
-  body .footer .foot-wrapper .foot-details {
-    width: 100%;
-    margin-left: 0%; }
-  body .footer .foot-wrapper .footer-links {
-    width: 100%; } }
+    font-size: 15px; } }
 
 @media (max-width: 450px) {
   body .video-wrapper .my-video {
