--- a/styles/index.scss
+++ b/styles/index.scss
@@ -25,6 +25,7 @@ body{
             bottom: 0;
             width: 100%;
             height: 100%;
+            vertical-align: bottom;
             object-fit: cover;
             position: relative;
         }
@@ -43,7 +44,7 @@ body{
             width: 100%;
 
             .left{
-                padding: 30px;
+                padding: 20px;
 
                 img{
                     width: 78px;
@@ -59,7 +60,7 @@ body{
                 font-size: 20px;
                 list-style-type: none;
                 margin: 0%;
-                padding-right: 10px;
+                padding: 0%;
 
                 li{
                     display: inline;
@@ -246,6 +247,39 @@ body{
     }
 }
 
+@media (max-width:1439px){
+    body{
+        .content{
+            .top-nav {
+                .left{
+                    .org-name{
+                        display: none;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width:1200px){
+    body{
+        footer{
+            .foot-wrapper{
+                .bottom-sec{
+                    .footer-links{
+                        justify-content: center;
+                        li{
+                            display: block;
+                            padding: 10px 8px;
+                            text-align: center;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
 @media (max-width:1025px){
     body{
         .video-wrapper{
@@ -285,22 +319,10 @@ body{
                 }
             }
         }   
-        .footer{
-            .foot-wrapper{
-                width: 100%;
-
-                .foot-details{
-                    width: 40%;
-                    padding-left:20px ;
-                }
-
-                .footer-links{
-                    width: 60%;
-                }
-            }
-        }
     }
 }
+
+
 
 @media (max-width:912px){
     body{ 
@@ -382,30 +404,22 @@ body{
                 }
             }
         } 
+    }
+}
+
+@media (max-width:765px){
+    body{
         .footer{
             .foot-wrapper{
                 .foot-details{
-                    width: 50%;
-                    margin-left: 30px;
+                    width: 100%;
+                    margin-left: 0%;
                 }
-
                 .footer-links{
-                    width: 45%;
-                    justify-content: center;
-        
-                    .foot-menu{
-                        list-style-type: none;
-                        padding: 0%;
-                        li{
-                            display: block;
-                            padding: 10px 8px;
-                            text-align: center;
-                        }
-                    }
-                } 
-
+                    width: 100%;
+                }
             }
-        } 
+        }
     }
 }
 
@@ -435,17 +449,7 @@ body{
                 }
             }
         }
-        .footer{
-            .foot-wrapper{
-                .foot-details{
-                    width: 100%;
-                    margin-left: 0%;
-                }
-                .footer-links{
-                    width: 100%;
-                }
-            }
-        }
+        
     }
 }
 
