--- a/styles/sermon.scss
+++ b/styles/sermon.scss
@@ -130,6 +130,7 @@ body{
                     margin-left: 8px;
                     font-family: $fontMonstserrat;
                     font-weight: 300;
+                    width: 150px;
                 }
     
                 input:focus{
@@ -185,8 +186,8 @@ body{
                         font-family: $fontMonstserrat;
                         font-weight: 600;
                         font-size: 20px;
-                        max-width: 300px;
                         padding-right: 5px;
+                        max-width: 50%;
                         border-right: 2px solid black;
                     }
     
@@ -194,8 +195,8 @@ body{
                         font-family: $fontMonstserrat;
                         font-weight: 500;
                         font-size: 16px;
-                        max-width: 250px;
                         padding: 0px 10px;
+                        max-width: 50%;
                     }
                 }
                 .sermon-date{
@@ -237,7 +238,7 @@ body{
     }
 }
 
-@media (max-width:1025px){
+@media (max-width:1150px){
     body{
 
         .sermon-div{
