--- a/styles/login.css
+++ b/styles/login.css
@@ -1,17 +1,15 @@
+body .video-wrapper {
+  min-height: 100%; }
+  body .video-wrapper .my-video {
+    height: 100vh; }
+
+body .card-top {
+  padding: 100px 0px 0px; }
+
 body .login-card {
   width: 700px; }
   body .login-card .card-inner {
     padding: 60px; }
-    body .login-card .card-inner h4 {
-      color: #5d596c; }
-    body .login-card .card-inner p {
-      color: #5D596C; }
-    body .login-card .card-inner .form-label {
-      margin-bottom: 0.25rem;
-      font-size: 0.8125rem;
-      color: #5D596C; }
-    body .login-card .card-inner .remember-check {
-      color: #5D596C; }
 
 @media (max-width: 1024px) {
   body .login-card {
@@ -20,18 +18,32 @@ body .login-card {
       padding: 50px; } }
 
 @media (max-width: 768px) {
+  body .card-top {
+    padding: 150px 0px 0px; }
   body .login-card {
     width: 500px; }
     body .login-card .card-inner {
       padding: 40px; } }
 
 @media (max-width: 568px) {
+  body .card-top {
+    padding: 100px 0px 0px; }
   body .login-card {
     width: 400px; }
     body .login-card .card-inner {
       padding: 30px; } }
 
 @media (max-width: 450px) {
+  body .card-top {
+    padding: 50px 0px 0px; }
+  body .login-card {
+    width: 250px; }
+    body .login-card .card-inner {
+      padding: 20px; } }
+
+@media (max-width: 320px) {
+  body .card-top {
+    padding: 20px 0px 0px; }
   body .login-card {
     width: 250px; }
     body .login-card .card-inner {
