header logo modification

--- a/styles/index.css
+++ b/styles/index.css
@@ -33,7 +33,7 @@ body {
         body .content .top-nav .left img {
           width: 78px; }
         body .content .top-nav .left .org-name {
-          width: 180px;
+          width: 80%;
           height: 40px; }
       body .content .top-nav .right {
         font-size: 20px;
