--- a/styles/index.scss
+++ b/styles/index.scss
@@ -51,7 +51,7 @@ body{
                 }
 
                 .org-name{
-                    width: 180px;
+                    width: 80%;
                     height: 40px;
                 }
             }
