--- a/styles/login.css
+++ b/styles/login.css
@@ -1,7 +1,7 @@
 body .video-wrapper {
   min-height: 100%; }
   body .video-wrapper .my-video {
-    height: 100vh; }
+    height: 1000px; }
 
 body .card-top {
   padding: 100px 0px 0px; }
@@ -37,7 +37,7 @@ body .login-card {
   body .card-top {
     padding: 50px 0px 0px; }
   body .login-card {
-    width: 250px; }
+    width: 300px; }
     body .login-card .card-inner {
       padding: 20px; } }
 
@@ -45,6 +45,4 @@ body .login-card {
   body .card-top {
     padding: 20px 0px 0px; }
   body .login-card {
-    width: 250px; }
-    body .login-card .card-inner {
-      padding: 20px; } }
+    width: 280px; } }
