--- a/styles/login.scss
+++ b/styles/login.scss
@@ -4,7 +4,7 @@ body{
         min-height: 100%;
 
         .my-video{
-            height: 100vh;
+            height: 1000px;
         }
     }
 
@@ -69,7 +69,7 @@ body{
             padding: 50px 0px 0px;
         }
         .login-card{
-            width: 250px;
+            width: 300px;
             .card-inner{
                 padding: 20px;
             }
@@ -84,10 +84,7 @@ body{
             padding: 20px 0px 0px;
         }
         .login-card{
-            width: 250px;
-            .card-inner{
-                padding: 20px;
-            }
+            width: 280px;
         }
     }
 }
