--- a/styles/detail.scss
+++ b/styles/detail.scss
@@ -84,7 +84,7 @@ body{
         .detail-notes{
             width: 90%;
             margin: auto;
-            text-align: left;
+            text-align: justify;
             font-family: $fontMonstserrat;
             font-size: 16px;
             font-weight: 500;
