--- a/styles/sermon.scss
+++ b/styles/sermon.scss
@@ -140,11 +140,12 @@ body{
                 width: 100%;
                 background-color: #ffffff;
                 box-shadow: 0px 1px 10px #516AA4;
-                padding:10px;
+                padding:10px 20px;
                 border-radius: 12px;
                 margin-bottom: 20px;
                 font-family: $fontMonstserrat;
                 font-weight: 300;
+                border: 1px solid #999AA3;
             }
             
             .search-sermon-pages{
@@ -234,6 +235,12 @@ body{
         .bottom-pagination nav div:first-child{
             display: none;
         }
+    }
+
+
+    .form-select:focus{
+        border: none;
+        box-shadow: none;
     }
 }
 
