--- a/styles/index.scss
+++ b/styles/index.scss
@@ -419,8 +419,18 @@ body{
     }
 }
 
-@media (max-width:765px){
+@media (max-width:768px){
     body{
+        .center-content{
+
+            .center-detail{
+                h2{
+                    font-size: 40px;
+                }
+            }
+          
+        }
+
         .footer{
             .foot-wrapper{
                 .foot-details{
