--- a/styles/index.css
+++ b/styles/index.css
@@ -187,11 +187,11 @@ body {
       padding: 10px 8px;
       text-align: center; } }
 
-@media (max-width: 10px) {
+@media (max-width: 1024px) {
   body .video-wrapper .my-video {
     height: 700px; }
   body .content .top-nav .right li a {
-    padding: 10px;
+    padding: 0px 10px;
     font-size: 14px; }
   body .center-content {
     top: 12%; }
@@ -207,7 +207,7 @@ body {
       font-size: 18px;
       padding: 13px 33px; } }
 
-@media (max-width: 1040px) {
+@media (max-width: 912px) {
   body .video-wrapper .my-video {
     height: 950px; }
   body .content .top-nav .right {
